# ClawdPilot

./: .gitignore  AGENTS.md  ALPN_FIX.md  BIDIRECTIONAL_COMMUNICATION_COMPLETE.md  BIDIRECTIONAL_STREAM_FIX.md  BINCODE_JSON_FIX.md  CLAUDE.md  CLI_ADAPTATION.md  CLI_ADAPTATION_COMPLETE.md  COMPILATION_FIX.md  CONNECTION_DEBUG_GUIDE.md  CONNECTION_FORMAT_FIX.md  CONNECTION_TROUBLESHOOTING_SUMMARY.md  Cargo.toml  DATA_STRUCTURE_CLEANUP.md  DEBUG_CONNECTION.md  DEVELOPMENT.md  DEVICE_DETECTION.md  ENDPOINT_SERIALIZATION_COMPLETE.md  FINAL_FIX.md  FINAL_STATUS.md  FLUTTER_ANALYZE_FIX.md  FLUTTER_DEBUG_GUIDE.md  FRONTEND_MESSAGE_RECEPTION_FIX.md  GEMINI.md  LOGGING.md  MESSAGE_CHANNEL_CLEANUP.md  MESSAGE_HANDLER_RESPONSE_FIX.md  MOBILE_INPUT_OPTIMIZATION.md  MOBILE_OPTIMIZATIONS.md  MOBILE_TERMINAL_UI.md  MULTI_SESSION_OPTIMIZATION.md  NERD_FONT_GUIDE.md  P2P_TERMINAL_FIX.md  PHASE3_PERFORMANCE_OPTIMIZATION.md  PROJECT_ANALYSIS_SUMMARY.md  QUICK_DEBUG_REFERENCE.md  QUIC_CLIENT_REDESIGN_COMPLETE.md  QUIC_IMPLEMENTATION_STATUS.md  README.md  (+46 more)
.claude/: settings.local.json
.github/workflows/: build-and-test.yml  publish-to-auto-release.yml
app/: CLAUDE.md  Cargo.toml  Info.ios.plist  analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml  tauri.conf.json
app/capabilities/: desktop.json  main.json  mobile.json
app/icons/: icon.icns
app/integration_test/: simple_test.dart
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/bridge_generated.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  message_bridge.dart
app/lib/bridge_generated.dart/api/: iroh_client.dart
app/lib/screens/: connect_screen.dart  connect_screen_simple.dart  main_screen.dart
app/lib/src/rust/: bridge_api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
app/lib/src/rust/api/: iroh_client.dart
app/lib/stores/: app_store.dart
app/lib/theme/: app_theme.dart
app/lib/widgets/: qr_scanner_dialog.dart  settings_view.dart  tcp_forwarding_view.dart  terminal_view.dart
app/macos/: Podfile
app/macos/Runner.xcodeproj/: project.pbxproj
app/rust/: Cargo.toml  build.rs
app/rust/src/: frb_generated.rs  message_bridge.rs
app/rust/src/api/: iroh_client.rs  mod.rs
app/src/: lib.rs  main.rs  p2p.rs  string_compressor.rs  tcp_forwarding.rs  terminal_events.rs
app/src-tauri/src/: lib.rs  p2p.rs
app/test/: widget_test.dart
app/windows/flutter/: generated_plugins.cmake
browser/: .gitignore  Cargo.toml  README.md  app.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
browser/src/: app.tsx  entry-server.tsx  index.css  lib.rs  shared.rs  vite-env.d.ts  wasm.rs
cli/: CLAUDE.md  Cargo.toml  OPTIMIZATION_MIGRATION_GUIDE.md
cli/src/: CLAUDE.md  cli.rs  client.rs  command_router.rs  crossterm_context.rs  error_recovery.rs  host.rs  local_client.rs  local_terminal_manager.rs  local_webshare.rs  main.rs  message_server.rs  network_optimizer.rs  optimized_terminal_integration.rs  optimized_terminal_session.rs  output_batcher.rs  p2p.rs  p2p_buffer_manager.rs  p2p_terminal_session.rs  performance_monitor.rs  remote_controller.rs  remote_terminal.rs  resource_manager.rs  shell.rs  shell_manager.rs  terminal.rs  terminal_logger.rs  terminal_manager.rs  terminal_optimized.rs  terminal_runner.rs  terminal_session.rs
cli/src/agent_wrapper/: acp.rs  claude.rs  claude_streaming.rs  codex.rs  factory.rs  gemini.rs  generic_streaming.rs  mod.rs  opencode.rs
cli/src/terminal_driver/: mod.rs  unix.rs  windows.rs
cli/tests/: ansi_filter_tests.rs
docs/: ACP_FEATURE_PROGRESS.md  IOS_BUILD.md  SESSION_MANAGEMENT.md  TERMINAL_SESSIONS.md  external-agents-comparison.md  tcp_forwarding.md
examples/: Cargo.toml  history_demo.md  tcp_forwarding_demo.rs
lib/: CLAUDE.md  Cargo.toml
lib/src/: CLAUDE.md  lib.rs
lib/src/agent/: CLAUDE.md  acp.rs  claude_sdk.rs  codex_acp.rs  copilot.rs  events.rs  factory.rs  generic_streaming.rs  message_adapter.rs  mod.rs  qwen.rs  session.rs
plugins/: fix-cjs-modules.ts
scripts/: ios-deploy.sh
shared/: Cargo.toml
shared/src/: CLAUDE.md  browser.rs  event_manager.rs  lib.rs  message_adapter.rs  message_performance_improvements.rs  message_protocol.rs  p2p.rs  performance_optimized_messaging.rs  quic_server.rs  string_compressor.rs  tcp_forward.rs  util.rs
src/: App-enhanced.tsx  App.css  App.tsx  CLAUDE.md  cli.rs  fonts-local.css  fonts.css  index.css  main.tsx  terminal-font-manager.js  terminal.rs
src/components/: AgentPanel.tsx  AppLayout.tsx  CLAUDE.md  ChatView.tsx  ConnectionInterface.tsx  ConnectionView.tsx  Dashboard.tsx  DevicesView.tsx  EnhancedConnectionInterface.tsx  (+22 more)
test_ticket/: Cargo.toml  debug_connection.rs  debug_ticket.rs  test_app_ticket.rs
zeroclaw/: Cargo.toml  README.md
zeroclaw/src/: agent.rs  lib.rs
zeroclaw/src/cron/: mod.rs
zeroclaw/src/runtime/: mod.rs  tauri_runtime.rs  traits.rs
zeroclaw/src/skillforge/: integrate.rs
zeroclaw/src/skills/: mod.rs
zeroclaw/src/tools/: browser.rs  browser_open.rs  enhanced_screenshot.rs  file_read.rs  file_write.rs  git_operations.rs  hardware_memory_map.rs  http_request.rs  mod.rs  screenshot.rs
(+154 files in other folders)
