[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
riterm-shared = { path = "../shared" }
data-encoding = "2.8"

[[example]]
name = "tcp_forwarding_demo"
path = "tcp_forwarding_demo.rs"