[package]
name = "test_ticket"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
data-encoding = "2.6"
serde_json = "1.0"
base64 = "0.22"

[[bin]]
name = "test_ticket"
path = "test_ticket.rs"

[[bin]]
name = "test_app_ticket"
path = "test_app_ticket.rs"

[[bin]]
name = "debug_ticket"
path = "debug_ticket.rs"

[[bin]]
name = "debug_connection"
path = "debug_connection.rs"